--- a/res/values-en-rAU/strings.xml
+++ b/res/values-en-rAU/strings.xml
@@ -139,22 +139,23 @@
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Close"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Closed"</string>
 
-    <string name="settings_button_text">Configuración del quiosco</string>
-    <string name="customize">Personalizar</string>
-    <string name="access_denied">Acceso denegado</string>
-    <string name="access_denied_subheading">No se le permite acceder a este contenido</string>
-    <string name="app_crash">Bloqueo de la aplicación</string>
-    <string name="app_crash_subheading">Disculpe las molestias, solucionaremos este problema pronto</string>
-    <string name="exit">Salida</string>
-    <string name="custom_settings">Configuraciones</string>
-    <string name="plugins">Complementos</string>
+    <string name="settings_button_text">Kiosk Settings</string>
+    <string name="customize">Customize</string>
+    <string name="access_denied">Access denied</string>
+    <string name="access_denied_subheading">You are not allowed to access this content</string>
+    <string name="app_crash">App Crash</string>
+    <string name="app_crash_subheading">Sorry for the inconvenience we will fix this issue soon</string>
+    <string name="exit">Exit</string>
+    <string name="custom_settings">Settings</string>
+    <string name="plugins">Plugins</string>
     <string name="wifi">Wifi</string>
     <string name="bluetooth">Bluetooth</string>
-    <string name="sound">Sonido</string>
-    <string name="airplane_mode">Modo avión</string>
-    <string name="mobile_data">Datos móviles</string>
+    <string name="sound">Sound</string>
+    <string name="airplane_mode">Airplane Mode</string>
+    <string name="mobile_data">Mobile Data</string>
     <string name="gps">GPS</string>
-    <string name="vpn">VPN</string>
-    <string name="settings_plugin">Complemento de configuración</string>
-    <string name="allow_settings_plugin_subheading">Los complementos seleccionados están disponibles en la opción de configuración en la pantalla de inicio de KeyOS</string>
+    <string name="vpn">Vpn</string>
+    <string name="settings_plugin">Settings Plugin</string>
+    <string name="allow_settings_plugin_subheading">Selected plugins are available under settings option in KeyOS home screen</string>
+
 </resources>
